--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,25 @@
 name: CI
-
 on:
-
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-  workflow_dispatch:
-  
 jobs:
- 
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
     steps:
-    
       - name: Checkout
         uses: actions/checkout@master
-
+      
+      - name: Install and Build
+        run: |
+          yarn instll 
+          yarn build
+        
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: build
-          BUILD_SCRIPT: yarn && yarn build
+        with:
+          branch: gh-pages
+          folder: build
 
 
