--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       
       - name: Install and Build
         run: |
-          yarn instll 
+          yarn install 
           yarn build
         
       - name: Build and Deploy
