--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@stoplight/elements": "^7.3.7",
     "@styled-icons/boxicons-logos": "^10.38.0",
     "clsx": "^1.1.1",
+    "docusaurus": "^1.14.7",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
